--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.3.0",
     "git-commit-msg-linter": "^5.0.8",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.27.0",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
