--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.27.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
