--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "embla-carousel-react": "^8.3.0",
+    "embla-carousel-autoplay": "^8.3.1",
+    "embla-carousel-react": "^8.3.1",
     "git-commit-msg-linter": "^5.0.8",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
