--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "husky": "^9.1.6",
