--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "embla-carousel-react": "^8.3.1",
     "git-commit-msg-linter": "^5.0.8",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.15",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.27.0",
